welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:3: error: '=' expected but ';' found.
  for (i<- 0 to getMondeLargeur()-1){
^